feat: new `/api/veggies/:id/:classId` endpoint
